# my_beginner_tutorials

./: CMakeLists.txt  README.md  package.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/beginner_tutorials/include/beginner_tutorials/beginner_tutorials/srv/: change_output_string.h
install/beginner_tutorials/include/beginner_tutorials/beginner_tutorials/srv/detail/: change_output_string__functions.c  change_output_string__functions.h  change_output_string__rosidl_typesupport_introspection_c.h  change_output_string__rosidl_typesupport_introspection_cpp.hpp  change_output_string__struct.h  change_output_string__traits.hpp  change_output_string__type_support.c
install/beginner_tutorials/lib/beginner_tutorials/: listener  talker
install/beginner_tutorials/share/ament_index/resource_index/rosidl_interfaces/: beginner_tutorials
install/beginner_tutorials/share/beginner_tutorials/: local_setup.sh  package.sh
install/beginner_tutorials/share/beginner_tutorials/cmake/: beginner_tutorials__rosidl_typesupport_cppExport.cmake  beginner_tutorials__rosidl_typesupport_introspection_cExport.cmake  beginner_tutorials__rosidl_typesupport_introspection_cppExport.cmake  export_beginner_tutorials__rosidl_generator_cExport.cmake  export_beginner_tutorials__rosidl_generator_pyExport.cmake
install/beginner_tutorials/share/beginner_tutorials/srv/: ChangeOutputString_Request.msg
launch/: publisher_subscriber.launch.py
log/: latest_build
results/: catch2_tests_output.txt  cppcheck_output.txt  cpplint_output.txt  ros2_bag_output.txt
results/recorded_topics/: metadata.yaml  recorded_topics_0.db3
src/: publisher_function.cpp  subscriber_function.cpp
test/: beginner_tutorials_tests.cpp  integration_test_node.cpp
